--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/telegrambot
 spring.datasource.username=student
 spring.datasource.password=chocolatefrog
 spring.jpa.hibernate.ddl-auto=validate
-telegram.bot.token=8099597053:AAFfbE_yTsvLpUotoxaeBZDqbT2EvDJICko
+telegram.bot.token=
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.liquibase.enabled=true
